fix: fix visible elelent hooks

--- a/src/components/BackgroundAnimation/index.module.scss
+++ b/src/components/BackgroundAnimation/index.module.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #1a191d;
   overflow: hidden;
   z-index: -1;
