--- a/src/components/Content/TestContent/index.module.scss
+++ b/src/components/Content/TestContent/index.module.scss
@@ -12,7 +12,7 @@
 .name {
   margin-top: 300px;
   margin-bottom: 400px;
-  font-size: 120px;
+  font-size: 6vw;
   color: white;
   font-weight: bold;
   text-shadow: 2px 2px 5px rgba(115, 62, 248, 0.7);
